--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -26,160 +25,95 @@
     <script src='https://kit.fontawesome.com/4c96715b37.js'></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Hiếu Monster</h1>
-            <p>Nhật ký đầu tư mạo hiểm trực tuyến</p>
-        </header>
-        <nav>
-            <a href="https://hieu.monster/bang-chung-thanh-toan/">Bằng chứng thanh toán</a>
-        </nav>
-        <main>
-            <div class="table-outer">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Tên chương trình</th>
-                            <th>Kế hoạch đầu tư</th>
-                            <th>Ngày tôi tham gia</th>
-                            <th>Gửi</th>
-                            <th>Nhận</th>
-                            <th>Kết quả</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="scamed">
-                            <td><a target="_blank" href="https://hugeprofits.cc/?ref=nguoique">Hugeprofits.cc</a></td>
-                            <td>15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</td>
-                            <td>00:13 18-07-2021</td>
-                            <td>$10</td>
-                            <td>$9.4</td>
-                            <td>Lỗ $0.6</td>
-                        </tr>
-                        <tr class="scamed">
-                            <td><a target="_blank" href="https://bitpush.biz/?ref=nguoique">Bitpush.biz</a></td>
-                            <td>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</td>
-                            <td>23:28 17-07-2021</td>
-                            <td>$10</td>
-                            <td>$5.83</td>
-                            <td>Lỗ $4.17</i></td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://bico.finance/?ref=nguoique">Bico.finance</a></td>
-                            <td>3.6% hàng ngày mãi mãi</td>
-                            <td>21:15 16-07-2021</td>
-                            <td>$10</td>
-                            <td>$3.84</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://jaemoney.ltd/?ref=nguoique">Jaemoney.ltd</a></td>
-                            <td>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</td>
-                            <td>18:11 16-07-2021</td>
-                            <td>$40</td>
-                            <td>$16.24</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://fxhourly.com/signup.aspx?ref=nguoique">Fxhourly.com</a></td>
-                            <td>100.2% sau một giờ (bao gồm tiền gửi)</td>
-                            <td>20:41 15-07-2021</td>
-                            <td>$40</td>
-                            <td>$44.74</td>
-                            <td>Lãi $4.74</td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://oxenbitex.com/?ref=nguoique">Oxenbitex.com</a></td>
-                            <td>135% sau 1 ngày (bao gồm tiền gửi)</td>
-                            <td>21:30 13-07-2021</td>
-                            <td>$10</td>
-                            <td>$16.2</td>
-                            <td>Lãi $6.2</td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://lumino.cloud/?ref=nguoique">Lumino.cloud</a></td>
-                            <td>100.5% sau 1 ngày (bao gồm tiền gửi)</td>
-                            <td>19:56 11-07-2021</td>
-                            <td>$10</td>
-                            <td>$11.66</td>
-                            <td>Lãi $1.66</td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://101profit.biz/?ref=nguoique">101profit.biz</a></td>
-                            <td>101% sau 3 ngày (bao gồm tiền gửi)</td>
-                            <td>12:00 11-07-2021</td>
-                            <td>$10</td>
-                            <td>$11.6</td>
-                            <td>Lãi $1.6</td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://www.yacht-company.com/?r=10674">Yacht-company.com</a></td>
-                            <td>1% hàng ngày trong 90 ngày (hoàn trả tiền gửi)</td>
-                            <td>20:31 02-07-2021</td>
-                            <td>$30</td>
-                            <td>$10.5</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="scamed">
-                            <td><a target="_blank" href="https://crypto-capital.biz/?ref=nguoique">Crypto-capital.biz</a></td>
-                            <td>2% hàng ngày trong 6 ngày (hoàn trả tiền gửi)</td>
-                            <td>12:00 01-07-2021</td>
-                            <td>$40</td>
-                            <td>$26.8</td>
-                            <td>Lỗ $13.2</td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://blackcryptomining.com/?ref=nguoique">Blackcryptomining.com</a></td>
-                            <td>101% - 144% sau 1 ngày, 5555% sau 55 ngày (bao gồm tiền gửi)</td>
-                            <td>14:57 28-06-2021</td>
-                            <td>$22</td>
-                            <td>$13.35</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://lutex.ltd/?user=nguoique">Lutex.ltd</a></td>
-                            <td>1% hàng ngày trong 25 ngày làm việc (hoàn trả tiền gửi)</td>
-                            <td>22:20 25-06-2021</td>
-                            <td>$10</td>
-                            <td>$3.5</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://ship-alliance.com/?ref=nguoique">Ship-alliance.com</a></td>
-                            <td>0.8% hàng ngày trong 150 ngày (bao gồm tiền gửi)</td>
-                            <td>19:04 23-06-2021</td>
-                            <td>$10</td>
-                            <td>$7.54</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="scamed">
-                            <td><a target="_blank" href="https://aura4.finance/?ref=2106">Aura4.finance</a></td>
-                            <td>3% hàng ngày trong 30 ngày (hoàn trả tiền gửi)</td>
-                            <td>23:25 13-06-2021</td>
-                            <td>$10</td>
-                            <td>$21.7</td>
-                            <td>Lãi $11.7</td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://cryptofarm.vip/?ref=nguoique">Cryptofarm.vip</a></td>
-                            <td>3% hàng ngày trong 50 ngày làm việc (bao gồm tiền gửi)</td>
-                            <td>16:31 31-05-2021</td>
-                            <td>$10</td>
-                            <td>$14</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                        <tr class="paying">
-                            <td><a target="_blank" href="https://albet.io/nguoique">Albet.io</a></td>
-                            <td>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</td>
-                            <td>10:40 29-05-2021</td>
-                            <td>$30</td>
-                            <td>$36.52</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </main>
-    </div>
+    <header>
+        <h1>Hiếu Monster</h1>
+        <p>Nhật ký đầu tư mạo hiểm trực tuyến</p>
+    </header>
+    <main>
+        <ul class="paying">
+            <li>
+                <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Bico.finance ($10/$3.84)</a>
+                <time>21:15 16-07-2021</time>
+                <p>3.6% hàng ngày mãi mãi</p>
+            </li>
+            <li>
+                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd ($40/$16.24)</a>
+                <time>18:11 16-07-2021</time>
+                <p>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://fxhourly.com/signup.aspx?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Fxhourly.com ($40/$44.74)</a>
+                <time>20:41 15-07-2021</time>
+                <p>100.2% sau một giờ (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://oxenbitex.com/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Oxenbitex.com ($10/$16.2)</a>
+                <time>21:30 13-07-2021</time>
+                <p>	135% sau 1 ngày (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://lumino.cloud/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Lumino.cloud ($10/$11.66)</a>
+                <time>19:56 11-07-2021</time>
+                <p>100.5% sau 1 ngày (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://101profit.biz/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> 101profit.biz ($10/$11.6)</a>
+                <time>12:00 11-07-2021</time>
+                <p>101% sau 3 ngày (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://www.yacht-company.com/?r=10674" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Yacht-company.com ($30/$10.5)</a>
+                <time>20:31 02-07-2021</time>
+                <p>1% hàng ngày trong 90 ngày (hoàn trả tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://blackcryptomining.com/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Blackcryptomining.com ($22/$13.35)</a>
+                <time>12:52 07-07-2021</time>
+                <p>101% - 144% sau 1 ngày, 5555% sau 55 ngày (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://lutex.ltd/?user=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Lutex.ltd ($10/$3.5)</a>
+                <time>22:20 25-06-2021</time>
+                <p>1% hàng ngày trong 25 ngày làm việc (hoàn trả tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://ship-alliance.com/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Ship-alliance.com ($10/$7.4)</a>
+                <time>19:04 23-06-2021</time>
+                <p>0.8% hàng ngày trong 150 ngày (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://cryptofarm.vip/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Cryptofarm.vip ($10/$14)</a>
+                <time>16:31 31-05-2021</time>
+                <p>3% hàng ngày trong 50 ngày làm việc (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://albet.io/nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Albet.io ($30/$36.52)</a>
+                <time>03:33 04-07-2021</time>
+                <p>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</p>
+            </li>
+        </ul>
+        <ul class="scamed">
+            <li>
+                <a href="https://hugeprofits.cc/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Hugeprofits.cc ($10/$9.4)</a>
+                <time>00:13 18-07-2021</time>
+                <p>	15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://bitpush.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Bitpush.biz ($10/$5.83)</a>
+                <time>23:28 17-07-2021</time>
+                <p>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://aura4.finance/?ref=2106" target="_blank"><i class="fas fa-poop"></i> Aura4.finance ($10/$21.7)</a>
+                <time>23:25 13-06-2021</time>
+                <p>3% hàng ngày trong 30 ngày (hoàn trả tiền gửi)</p>
+            </li>
+            <li>
+                <a href="https://crypto-capital.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Crypto-capital.biz ($40/$26.8)</a>
+                <time>13:29 07-07-2021</time>
+                <p>2% hàng ngày trong 6 ngày (hoàn trả tiền gửi)</p>
+            </li>
+        </ul>
+    </main>
 </body>
 </html>
